--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -20,11 +20,15 @@
         </div>
 
         <div class="header-right">
-            <div class="search-inp"><input class="inp" type="text" placeholder="Search"></div><span class="search-icon"><img  src="assets/search-bar-icon.svg"></span>
+            <div class="search-inp">
+                <label>
+                <input class="inp" type="text" placeholder="Search">
+            </label>
+            </div>
             <a href="#" class="search-small"><i class="fa fa-search fa-lg icon" aria-hidden="true"></i></a>
             <img class="notif" src="assets/notification-icon.png" alt="notif">
 
-            <a href="#" class="HiUser" style="border-right:1px solid #433c72; padding-right:5px"><span class="circle2" ></span> Hi John! </a>
+            <a href="#" class="HiUser" style="border-right:1px solid #433c72;"><span class="circle2" ></span>Hi John!</a>
             <a href="#" class="askBeroe"><span class="circle3" >?</span>ask beroe</a>
             <a href="#" class="askBeroe-small"><span class="circle3" >?</span></a>
         </div>
@@ -64,7 +68,7 @@
         <p class="dis">Discussions>Pricing should be more transparent in IT and hardware.</p>
 
         <div class="sub-head">
-            <p class="dis1">Commercial & Reminder Items</p>
+            <p class="dis1"><b>Commercial & Reminder Items</b></p>
             <div class="heading-and-image">
                 <div class="heading-next-div">
                     <h2 class="heading-next">Pricing should be more transparent in IT and hardware.</h2>
@@ -78,42 +82,50 @@
 
             <div class="cellgridhead">
                 <div class="comment-stats">
-                    <span class="cell cellborder">Josh-Man56</span> <span class="cell cellborder">29 Sep 2020</span><span class="cell cellborder cell-left"><b><i class="fa fa-comment-alt fa-fw"></i></b> 10</span><span class="cell cellborder cell-left"><b><i class="fa fa-user-friends fa-fw"></i></b> 2</span>
-                    <img class="context hide" src="assets/context.png" alt="context"><span class="cell cellborder cell-left hide"></span>
+                    <span class="cell cellborder">Started by You</span> <span class="cell cellborder">2 Aug 2016</span><span class="cell cellborder cell-left"><b><i class="fa fa-comment-alt fa-fw"></i></b> 10</span><span class="cell cellborder cell-left"><b><i class="fa fa-user-friends fa-fw"></i></b> 2</span>
+                    <span class="cell cellborder hide"><img class="context hide" src="assets/context.png" alt="context"></span>
                 </div>
-                <div class="close-btn"><button class="close-discussion">Close Discussion</button></div>
+                <span class="cell "><div class="close-btn"><button class="close-discussion">Close Discussion</button></div></span>
             </div>
         </div>
     </div>
 
     <aside>
         <div class="side-header">
-            <h class="side-heading">TRENDING DISCUSSIONS</h>
+            <h class="side-heading"><b>TRENDING DISCUSSIONS</b></h>
         </div>
         <div class="content-side">
             <div class="content-one">
-                <p class="side-sub-heading">COMMERCIAL AND REMINDER ITEMS</p>
-                <p class="side-para">Pricing should be more transparent in IT and hardware.<span class="orginal-comment"> Original comment</span></p>
+                <p class="side-sub-heading"><b>COMMERCIAL AND REMINDER ITEMS</b></p>
+                <p class="side-para">Pricing should be more transparent in IT and hardware. <span style="color:#929292;font-weight:bold"> Original comment</span></p>
                 <div class="side-cells">
                     <span class="side-cell cellborder">Josh-Man56</span> <span class="side-cell cellborder">2 Aug 2016</span><span class="side-cell cellborder cell-left"><b><i class="fa fa-comment-alt fa-fw"></i></b> 1.5K</span><span class="side-cell  cell-left"><b><i class="fa fa-user-friends fa-fw"></i></b> 200</span>
                 </div>
                 <div class="sub-comment-side">
                     <p class="paragraph-main-side">I totally agree. It’s very hard to know exactly what you are paying for.</p>
-                    <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment"> 2 Aug 2016</span>
+                    <div class="side-cell-second">
+                        <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment"> 2 Aug 2016</span>
+                    </div>
                 </div>
-                <a class="side-follow" href="#">Follow</a>
+                <div class="follow-side-div">
+                    <a class="side-follow" href="#">Follow</a>
+                </div>
             </div>
             <div class="content-one">
-                <p class="side-sub-heading">COMMERCIAL AND REMINDER ITEMS</p>
-                <p class="side-para">Pricing should be more transparent in IT and hardware.<span class="orginal-comment"> Original comment</span></p>
+                <p class="side-sub-heading"><b>COMMERCIAL AND REMINDER ITEMS</b></p>
+                <p class="side-para">Pricing should be more transparent in IT and hardware. <span style="color:#929292;font-weight:bold"> Original comment</span></p>
                 <div class="side-cells">
                     <span class="side-cell cellborder">Josh-Man56</span> <span class="side-cell cellborder">2 Aug 2016</span><span class="side-cell cellborder cell-left"><b><i class="fa fa-comment-alt fa-fw"></i></b> 1.5K</span><span class="side-cell  cell-left"><b><i class="fa fa-user-friends fa-fw"></i></b> 200</span>
                 </div>
                 <div class="sub-comment-side">
                     <p class="paragraph-main-side">I totally agree. It’s very hard to know exactly what you are paying for.</p>
-                    <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment"> 2 Aug 2016</span>
+                    <div class="side-cell-second">
+                        <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment"> 2 Aug 2016</span>
+                    </div>
                 </div>
-                <a class="side-follow" href="#">Follow</a>
+                <div class="follow-side-div">
+                    <a class="side-follow" href="#">Follow</a>
+                </div>
             </div>
         </div>
         <div class="side-header">
@@ -121,28 +133,36 @@
         </div>
         <div class="content-side">
             <div class="content-one">
-                <p class="side-sub-heading">COMMERCIAL AND REMINDER ITEMS</p>
-                <p class="side-para">Pricing should be more transparent in IT and hardware.<span class="orginal-comment"> Original comment</span></p>
+                <p class="side-sub-heading"><b>COMMERCIAL AND REMINDER ITEMS</b></p>
+                <p class="side-para">Pricing should be more transparent in IT and hardware. <span style="color:#929292;font-weight:bold"> Original comment</span></p>
                 <div class="side-cells">
                     <span class="side-cell cellborder">Josh-Man56</span> <span class="side-cell cellborder">2 Aug 2016</span><span class="side-cell cellborder cell-left"><b><i class="fa fa-comment-alt fa-fw"></i></b> 1.5K</span><span class="side-cell  cell-left"><b><i class="fa fa-user-friends fa-fw"></i></b> 200</span>
                 </div>
                 <div class="sub-comment-side">
                     <p class="paragraph-main-side">I totally agree. It’s very hard to know exactly what you are paying for.</p>
-                    <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment"> 2 Aug 2016</span>
+                    <div class="side-cell-second">
+                        <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment"> 2 Aug 2016</span>
+                    </div>
                 </div>
-                <a class="side-follow" href="#">Follow</a>
+                <div class="follow-side-div">
+                    <a class="side-follow" href="#">Follow</a>
+                </div>
             </div>
             <div class="content-one">
-                <p class="side-sub-heading">COMMERCIAL AND REMINDER ITEMS</p>
-                <p class="side-para">Pricing should be more transparent in IT and hardware.<span class="orginal-comment"> Original comment</span></p>
+                <p class="side-sub-heading"><b>COMMERCIAL AND REMINDER ITEMS</b></p>
+                <p class="side-para">Pricing should be more transparent in IT and hardware. <span style="color:#929292;font-weight:bold"> Original comment</span></p>
                 <div class="side-cells">
                     <span class="side-cell cellborder">Josh-Man56</span> <span class="side-cell cellborder">2 Aug 2016</span><span class="side-cell cellborder cell-left"><b><i class="fa fa-comment-alt fa-fw"></i></b> 1.5K</span><span class="side-cell  cell-left"><b><i class="fa fa-user-friends fa-fw"></i></b> 200</span>
                 </div>
                 <div class="sub-comment-side">
                     <p class="paragraph-main-side">I totally agree. It’s very hard to know exactly what you are paying for.</p>
-                    <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment"> 2 Aug 2016</span>
+                    <div class="side-cell-second">
+                        <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment"> 2 Aug 2016</span>
+                    </div>
                 </div>
-                <a class="side-follow" href="#">Follow</a>
+                <div class="follow-side-div">
+                    <a class="side-follow" href="#">Follow</a>
+                </div>
             </div>
         </div>
 
@@ -231,7 +251,9 @@
     </article>
     <div class="reply-section">
         <button class="reply">Reply To Original Comment</button>
-        <span class="cell-comment-link " style="padding-top:10px;"><u>Back to top</u></span>
+        <div class="bottom-comment-link">
+            <a href="#"><span class="cell-comment-link" style="padding-top:10px;"><u>Back to top</u></span></a>
+        </div>
     </div>
     <footer>
 
