--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -25,11 +25,12 @@
                 <input class="inp" type="text" placeholder="Search">
             </label>
             </div>
-            <a href="#" class="search-small"><i class="fa fa-search fa-lg icon" aria-hidden="true"></i></a>
-            <img class="notif" src="assets/notification-icon.png" alt="notif">
+            <a href="#" class="search-small"><img class="search-sm" src="assets/search-small.png " style="padding-left:4px ;" alt="search"></a>
 
-            <a href="#" class="HiUser" style="border-right:1px solid #433c72;"><span class="circle2" ></span>Hi John!</a>
-            <a href="#" class="askBeroe"><span class="circle3" >?</span>ask beroe</a>
+            <img class="notif" src="assets/notification-icon.png" alt="notif">
+            <a href="#" class="HiUser"><span class="circle2" ></span>Hi John!</a>
+            <img class="down" src="assets/down.png " style="padding-right: 4px;" alt="down">
+            <a href="#" style="border-left:1px solid #433c72;" class="askBeroe"><span class="circle3" >?</span>ask beroe</a>
             <a href="#" class="askBeroe-small"><span class="circle3" >?</span></a>
         </div>
     </header>
@@ -185,7 +186,7 @@
             </div>
             <div class="sub-comment">
                 <p class="paragraph-main">I totally agree. It’s very hard to know exactly what you are paying for.</p>
-                <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment"> 2 Aug 2016</span><span class="cell-comment-link cellborder cell-left"> Reply </span><span class="cell-comment-link  cell-left"> flag </span>
+                <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment cellborder"> 2 Aug 2016</span><span class="cell-comment-link cellborder cell-left"> Reply </span><span class="cell-comment-link  cell-left"> flag </span>
 
             </div>
 
@@ -204,7 +205,7 @@
             </div>
             <div class="sub-comment">
                 <p class="paragraph-main">I totally agree. It’s very hard to know exactly what you are paying for.</p>
-                <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment"> 2 Aug 2016</span><span class="cell-comment-link cellborder cell-left"> Reply </span><span class="cell-comment-link  cell-left"> flag </span>
+                <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment cellborder"> 2 Aug 2016</span><span class="cell-comment-link cellborder cell-left"> Reply </span><span class="cell-comment-link  cell-left"> flag </span>
 
             </div>
 
@@ -223,7 +224,7 @@
             </div>
             <div class="sub-comment">
                 <p class="paragraph-main">I totally agree. It’s very hard to know exactly what you are paying for.</p>
-                <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment"> 2 Aug 2016</span><span class="cell-comment-link cellborder cell-left"> Reply </span><span class="cell-comment-link  cell-left"> flag </span>
+                <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment cellborder"> 2 Aug 2016</span><span class="cell-comment-link cellborder cell-left"> Reply </span><span class="cell-comment-link  cell-left"> flag </span>
 
             </div>
 
@@ -242,12 +243,11 @@
             </div>
             <div class="sub-comment">
                 <p class="paragraph-main">I totally agree. It’s very hard to know exactly what you are paying for.</p>
-                <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment"> 2 Aug 2016</span><span class="cell-comment-link cellborder cell-left"> Reply </span><span class="cell-comment-link  cell-left"> flag </span>
+                <span class="cell-comment cellborder">RobinM56</span> <span class="cell-comment cellborder"> 2 Aug 2016</span><span class="cell-comment-link cellborder cell-left"> Reply </span><span class="cell-comment-link  cell-left"> flag </span>
 
             </div>
 
         </div>
-
     </article>
     <div class="reply-section">
         <button class="reply">Reply To Original Comment</button>
