--- a/sample/public/index.html
+++ b/sample/public/index.html
@@ -25,7 +25,7 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,800;1,600&display=swap" rel="stylesheet">
     <title>Sphene</title>
   </head>
   <body>
